style.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

:root {
    --light-grey: #4e5055;
    --dark-grey: #2A2B2D;
    --greeny: #9cf15b;
    --trans-greeny: #9cf15b8e;
    --trans-black: #0000003d;
    --trans-white: #fffdfd3d;
    --light-grey-gradient: linear-gradient(to bottom, #DFE2EA, #F3F3F8);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

button,
input {
    outline: none;
    border: none;
    font: inherit;
    background: transparent;
    color: inherit;
}

/* Utils class */
.btn{
    cursor: pointer;
}
.btn:disabled{
    opacity: 0.6;
    cursor: default;
}


.pad-min {
    padding: 12px 20px;
}

.med-fnt {
    font-weight: 500;
}

.bold-fnt {
    font-weight: 600;
}

.brd-min {
    border-radius: 8px;
}

.flex {
    display: flex;
}

.flex.jt-sp-b {
    justify-content: space-between;
}

.flex.jt-cen {
    justify-content: center;
}

.flex.al-cen {
    align-items: center;
}

.bg-green {
    background: var(--greeny);
    color: var(--dark-grey);
}
.bg-green:hover:not(:disabled){
    box-shadow: 1px 1px 5px var(--trans-greeny), 1px -1px 5px var(--trans-greeny), -1px -1px 5px var(--trans-greeny), -1px 1px 5px var(--trans-greeny);
}

.bg-white {
    background: white;
    color: black;
}

/* Start */
.container {
    width: 100%;
    min-height: 100vh;
    padding: 0 0 32px 0;
    background-color: #000000;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    color: white;
    font-family: "Inter-Medium", "Inter", sans-serif;
}

.max-width-wrapper {
    max-width: 1200px;
}

/* Navbar */
.navbar {
    padding: 24px 16px;
}

.nav-logo {
    width: 195px;
    height: 60px;
}

.nav-right {
    display: flex;
}

.nav-right .btn:first-child {
    line-height: 1.5em;
    padding: 12px 20px;
    border: 1px solid var(--light-grey);
    color: var(--dark-grey);
    transition: all ease 200ms;
}

/* Main container */
.main-container {
    padding: 40px 0 0 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 24px;
}

.header-title {
    padding: 0 16px;
    color: #EFF1F2;
    text-align: center;
    text-wrap: balance;
    font-family: "Inter", sans-serif;
    font-weight: bold;
    letter-spacing: .7px;
    line-height: 1.5rem;
}

.header-title h2 {
    max-width: 950px;
    font-size: 28px;
    line-height: 35px;
}

.header-title p {
    max-width: 900px;
    padding: 24px 16px 0;
    color: #BABBC3;
    font-size: 16px;
}

/* Div showing file names */
.filename{
    display: none;
    background: var(--light-grey-gradient);
    padding: 16px;
    color: #000000;
    border: 1px solid #e4e7ed;
    letter-spacing: .7px;
    line-height: 1.4rem;
    margin: 0 25px;
    word-wrap: break-word;
    line-break: anywhere;
}
/* Progress */
.file-progress{
    box-shadow: 1px 1px 4px #00c8ff8c, 1px -1px 4px #00c8ff8c, -1px -1px 4px #00c8ff8c, -1px 1px 4px #00c8ff8c;
    display: none;
    width: 50%;
    max-width: 200px;
    border-radius: 8px;
    height: 8px;
    overflow: hidden;
}
.file-progress>div{
    border-radius: inherit;
    background: #00c8ff;
    box-shadow: 1px 1px 4px #00c8ff8c, 1px -1px 4px #00c8ff8c, -1px -1px 4px #00c8ff8c, -1px 1px 4px #00c8ff8c;
    height: 100%;
    width: 0%;
}

/* Buttons */
.audio-btns {
    gap: 24px;
    justify-content: space-between;
    flex-wrap: wrap;
    color: black;
    font-family: 'Inter Medium', 'Inter', sans-serif;
}

.audio-btns>.btn, .btn.flex {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
    line-height: 1.5em;
    transition: all ease 100ms;
}

.audio-btns>.btn img, .btn.flex img {
    width: 28px;
    height: 28px;
}

.audio-btns>.btn input[type='file'] {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: inherit;
    width: 100%;
    height: 100%;
}

.pause.btn{
    display: none;
}

/* Raw Transcript Container */
.raw-transcript-container {
    padding: 0 24px 24px;
    width: 100%;
}

.raw-transcript-container>h3 {
    padding: 0 0 12px 0;
    text-align: left;
    font-size: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    font-family: "Inter", sans-serif;
    letter-spacing: .7px;
}

.raw-transcript-container>h3 button.copy-btn {
    padding: 4px 6px;
    display: flex;
    align-items: center;
    gap: 4px;
    color: #000000;
    background-color: #9f9b9b;
    border-radius: 6px;
    border: 1px solid #9f9b9b;
    font-size: 16px;
    font-family: "Inter", sans-serif;
    font-weight: normal;
    letter-spacing: .7px;
    transition: background-color .2s linear, transform .15s linear;
}

.raw-transcript-container>h3 button.copy-btn:hover:not(:disabled) {
    background-color: #9cf15b;
}

.raw-transcript-container>h3 button.copy-btn:active:not(:disabled) {
    transform: scale(0.90);
}

.raw-transcript-container>h3 button.copy-btn img {
    width: 16px;
    height: 16px;
}

.transcript-text-container {
    position: relative;
    padding: 16px;
    color: #000000;
    background: linear-gradient(to bottom, #DFE2EA, #F3F3F8);
    border: 1px solid #e4e7ed;
    border-radius: 8px;
    font-family: "Inter", sans-serif;
    font-weight: normal;
    font-style: normal;
    letter-spacing: .7px;
    line-height: 1.4rem;
    max-height: 300px;
    overflow: hidden;
}
.transcript-text-wrapper{
    overflow: hidden;
    overflow-y: scroll;
    position: relative;
    height: 100%;
    max-height: calc(300px - 32px);
}
.transcript-text-wrapper::-webkit-scrollbar{
    width: 0;
}


@media screen and (max-width:651px) {
    .audio-btns{
        flex-direction: column;
        align-items: center;
    }
}

